k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travelbooking-svc
spec:
  selector:
    app: travelbooking
  ports:
  - port: 80
    targetPort: 80
